--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ bleach==6.2.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+colorama==0.4.6
 colorgram.py==1.2.0
 comm==0.2.2
+cryptography==45.0.4
 Cython==3.0.11
 debugpy==1.8.6
 decorator==5.1.1
@@ -115,6 +117,7 @@ tomli==2.0.1
 tomlkit==0.13.2
 tornado==6.4.1
 traitlets==5.14.3
+ttkbootstrap==1.13.11
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.12.2
 tzdata==2024.2
